--- a/5. Smart contract Solidity & bonnes pratiques de sécurité/package.json
+++ b/5. Smart contract Solidity & bonnes pratiques de sécurité/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.0",
     "@truffle/hdwallet-provider": "^2.0.10",
     "dotenv": "^16.0.1",
     "mocha": "^10.0.0",
