--- a/5. Smart contract Solidity & bonnes pratiques de sécurité/reactRopstenOld/client/package.json
+++ b/5. Smart contract Solidity & bonnes pratiques de sécurité/reactRopstenOld/client/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://github.com/DevHays/Developpeur-Ethereum-Template",
   "name": "truffle-client",
   "version": "0.1.0",
   "private": true,
@@ -7,21 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "98.css": "^0.1.18",
-    "dotenv": "^16.0.1",
-    "gh-pages": "^4.0.0",
-    "react": "^18.1.0",
+    "bootstrap": "^5.2.0-beta1",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^4.0.3",
-    "web3": "^1.7.4"
+    "web3": "^0.20.7"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
