--- a/5. Smart contract Solidity & bonnes pratiques de sécurité/reactRopsten/client/package.json
+++ b/5. Smart contract Solidity & bonnes pratiques de sécurité/reactRopsten/client/package.json
@@ -1,8 +1,9 @@
 {
-  "homepage": "https://github.com/DevHays/Developpeur-Ethereum-Template",
   "name": "truffle-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tp4.hayscarmelo.com",
+  "proxy": "https://tp4.hayscarmelo.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
